# kitsune-shuttle

./: .gitmodules  Cargo.toml  LICENSE  README.md  Secrets.toml  Shuttle.toml  flake.nix  public
src/: main.rs  resource.rs
